@@ -1,5 +1,10 @@
 2014-08-18  Rene Liebscher <R.Liebscher@gmx.de>
 
+	patch #8511 Fix reset on FT245R
+	* ft245r.c: applied patch
+
+2014-08-18  Rene Liebscher <R.Liebscher@gmx.de>
+
 	bug #43002 usbasp debug output typo
 	* usbasp.c: fixed typos
 
